--- a/rentals/templates/rentals/base.html
+++ b/rentals/templates/rentals/base.html
@@ -182,7 +182,7 @@
         <!-- Main Footer -->
         <footer class="main-footer">
             <div class="float-right d-none d-sm-inline">
-                <a href="#">
+                <a href="https://github.com/MohdAleeRehman/Online-Rental-Management-System">
                     <i class="fab fa-github"> GitHub</i>
                 </a>
             </div>
