--- a/rentals/templates/rentals/manage_items.html
+++ b/rentals/templates/rentals/manage_items.html
@@ -11,7 +11,7 @@
                 {% for item in owned_items %}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     <div>
-                        <strong>{{ item.name }}</strong> - {{ item.status }}
+                       <a href="{% url 'item_detail' item.pk %}"><strong>{{ item.name }}</strong></a> - {{ item.status }}
                     </div>
                     <div>
                         {% if item.status == 'requested' %}
@@ -23,6 +23,13 @@
                         <form method="post" action="{% url 'update_item_status' item.pk 'available' %}" class="d-inline">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-success btn-sm">Mark as Available</button>
+                        </form>
+                        {% endif %}
+                        {% if item.status == 'available' %}
+                        <a href="{% url 'edit_item' item.pk %}" class="btn btn-info btn-sm">Edit</a>
+                        <form method="post" action="{% url 'delete_item' item.pk %}" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                         </form>
                         {% endif %}
                     </div>
