--- a/rentals/templates/rentals/request_rental.html
+++ b/rentals/templates/rentals/request_rental.html
@@ -4,13 +4,14 @@
 <div class="container">
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">Request Rental</h3>
+            <h3 class="card-title">Request Rental for {{ item.name }}</h3>
         </div>
         <div class="card-body">
             <p>Are you sure you want to request the rental of "{{ item.name }}"?</p>
             <form method="post">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-success">Confirm</button>
+                <button type="submit" class="btn btn-success">Confirm Rental Request</button>
+                <a href="{% url 'item_detail' item.pk %}" class="btn btn-secondary">Cancel</a>
             </form>
         </div>
     </div>
