--- a/rentals/templates/rentals/user_profile.html
+++ b/rentals/templates/rentals/user_profile.html
@@ -14,7 +14,7 @@
             <ul class="list-group mb-3">
                 {% for item in owned_items %}
                 <li class="list-group-item">
-                    {{ item.name }} - {{ item.status }}
+                    <a href="{% url 'item_detail' item.pk %}"><strong>{{ item.name }}</strong></a> - {{ item.status }}
                     {% for request in item.rental_requests.all %}
                     {% if request.status == 'requested' %}
                     <p>Requested by: <a href="{% url 'user_profile' request.requester.profile.id %}">{{ request.requester.username }}</a></p>
